--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 aparatologia corporal facial cosmiatra
 cosmetologa cosmetologia cosmiatria piel
 cosmetica suavidad hidratación">
-        <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
    
